cursive-bootstrap/tests/ui/E-CON/E-CON-0212.cursive
// RUN: compile-fail
// DIAG: E-CON-0212
// SPEC: 8.9
// DESC: yield inside sync expression

procedure yield_in_sync() -> i32 {
    sync {
        yield 1  //~ ERROR E-CON-0212: yield inside sync
    }
    return 0
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
